Changes for 2.2.8rc1

New features:
.......PS. [ZBX-4054] added support for SNMP values of type OID (asaveljevs)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Polish and Russian translations; thanks to Zabbix translators (Richlv)

Bug fixes:
A......... [ZBX-8832] fixed importing applications from linked templates (Krists)
........S. [ZBX-8978] fixed propagation of the interfaces into discovered hosts in same order as in the parent host (Sasha)
....I..PS. [ZBX-8849] fixed redundant linking with -lcrypto when linking with Net-SNMP (asaveljevs)
...G...PS. [ZBX-8913] fixed JSON validation sometimes failing to process utf-8 sequences (wiper)
.D........ [ZBX-6542] updated description of HousekeepingFrequency parameter in the default server and proxy configuration files (Sasha)
.......PS. [ZBX-8833] fixed dynamic SNMP item cache working incorrectly for hosts with multiple SNMP interfaces, optimized cache performance (asaveljevs)
A.F....... [ZBX-8904] fixed item.get API to not read all host interfaces when option "selectInterfaces" is used (Krists)
.......PS. [ZBX-8538] added Net-SNMP retry of 1 for cases where Zabbix will not be retrying itself (asaveljevs)
.......PS. [ZBX-8538] changed the strategy to decrease the optimal number of variables two times only (asaveljevs)
..F....... [ZBX-8232] fixed performance issues in maps (Ivo)
........S. [ZBX-8948] fixed memory leak when checking Template condition during action processing (wiper)
........S. [ZBX-6353] improved history cache performance when it's flooded with data from less than 1000 items (wiper)

--------------------------------------------------------------------------------
Changes for 2.2.7

New features:
A.F....... [ZBX-1357] updated Polish and Spanish translations; thanks to Zabbix translators (Richlv)

--------------------------------------------------------------------------------
Changes for 2.2.7rc2

Bug fixes: